# bicopter

./: .gitignore  README.md
bicopter_analytics/: package.xml  setup.cfg  setup.py
bicopter_analytics/bicopter_analytics/: bicopter_analytics_node.py
bicopter_analytics/config/: default.yaml  rviz2_config.rviz
bicopter_analytics/launch/: run_bicopter_analytics.py
bicopter_angle_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
bicopter_angle_controller/bicopter_angle_controller/: bicopter_angle_controller.py
bicopter_angle_controller/config/: config.yaml  default.yaml
bicopter_angle_controller/launch/: run_bicopter_angle_controller.launch  run_bicopter_angle_controller.launch.py
bicopter_angle_controller/src/: bicopter_angle_controller.py
bicopter_input_controller/: CMakeLists.txt  package.xml
bicopter_input_controller/launch/: run_bicopter_input_controller.launch.py
bicopter_input_controller/src/: bicopter_input_controller.cpp
bicopter_lowlevel_controller/: package.xml  setup.cfg  setup.py
bicopter_lowlevel_controller/bicopter_lowlevel_controller/: bicopter_lowlevel_controller_node.py  subscriber_member_function.py
bicopter_model/: CMakeLists.txt  package.xml
bicopter_msgs/: CMakeLists.txt  package.xml
bicopter_pybullet_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
bicopter_sim/: CMakeLists.txt  package.xml  setup.cfg  setup.py
mpu6050_ros2/: package.xml  setup.cfg  setup.py
urdf/: bicopter_base.stl  bicopter_propmount.stl  bicopter_urdf.urdf  bicopter_urdf.urdf.xml  urdf_test.py
(+31 files in other folders)
